Tune zoom: 1.5->1.25 to fix scrollbar overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 
 html {
-  zoom: 1.5;
+  zoom: 1.25;
 }
 
 html, body {
